--- a/Di3/Di3Bioinformatics/Di3Bioinformatics.csproj
+++ b/Di3/Di3Bioinformatics/Di3Bioinformatics.csproj
@@ -38,6 +38,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\CSharpTest.Net.Collections.14.906.1403.1082\lib\net40\CSharpTest.Net.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net, Version=2.0.0.668, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,7 +58,11 @@
     <Compile Include="FunctionsOutput\FunctionOutput.cs" />
     <Compile Include="FunctionsOutput\Output.cs" />
     <Compile Include="Genome.cs" />
+    <Compile Include="PeakClass.cs" />
+    <Compile Include="PeakDataClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TESTCheck.cs" />
+    <Compile Include="TESTSerializers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IInterval\IInterval.csproj">
@@ -71,7 +79,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
